# ElementCommander

./: .gitignore  AI_FEATURES.md  BUGLIST.md  CLAUDE.md  Cargo.toml  GEMINI.md  QUICKSTART.md  README.md  demo.sh  watch.sh
examples/: test_ai.rs  test_extraction.rs
src/: app.rs  commands.rs  config.rs  events.rs  main.rs
src/ai/: client.rs  mod.rs  state.rs
src/fs/: archive.rs  local.rs  mod.rs
src/ops/: archive.rs  classify.rs  cleanup.rs  duplicate.rs  git_history.rs  mod.rs  search.rs  storage.rs  sync.rs
src/panel/: mod.rs
src/ui/: ai.rs  ai_command.rs  cmdbar.rs  dialog.rs  help.rs  mod.rs  panel.rs  searchbar.rs  statusbar.rs  theme.rs  viewer.rs
