[package]
name = "hermes_tail"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.1"
glob = "0.3"
syntect = "5.2"
termimad = "0.31"
textwrap = "0.16"
pulldown-cmark = "0.10"
notify = "6.1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[[bin]]
name = "hermes_tail"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"
